--- a/Assets/index.css
+++ b/Assets/index.css
@@ -1,5 +1,5 @@
 *{
-    font-family: "Noto Sans JP", "游ゴシック", "ヒラギノ角ゴ ProN", "Hiragino Sans";
+    font-family: "Noto Sans JP", "YuGothic", "Yu Gothic", "Hiragino Sans";
 }
 p{
     font-weight: 400;
